# mephi_object_oriented_programming

./: .clang-format  .clangd  .gitignore  .gitmodules  README.md  prep_exec.sh  run_in_native_shell.sh  run_windows.py
1/: CMakeLists.txt  Makefile  README.md  exec.sh  main.cpp
2/: CMakeLists.txt  Doxyfile  EH.hpp  Makefile  README.md  cocktail.cpp  main.cpp  main_result_by_reference.diff
2/cocktail/: CMakeLists.txt  array.hpp  cocktail.cpp  cocktail.hpp  cocktail_map.cpp  cocktail_map.hpp  hash_table.hpp
2/tests/: CMakeLists.txt  test_cocktail.cpp
3/: .clangd  .gitignore  CMakeLists.txt  Doxyfile  Makefile  REAMDE.md  SConstruct  SConstruct_  config.toml  design.cpp  design.py  fix_puml.py  godot_path.sh  ideas.md  items.cmake  main.cpp  tsan_suppressions.txt
3/demo/: export_presets.cfg  main.tscn  project.godot
3/resources/: def.vert  outline.frag  outline.vert
3/src/: array.hpp  color_operations.hpp  deepcopy.hpp  design.hpp  export.hpp  game.cpp  game.hpp  game_exports.hpp  gdexample.h  impl.cpp  main.cpp  matrix.hpp  missing_serializers.hpp  register_types.cpp  shared.hpp  shield.cpp  sword.cpp  toml_impl.cpp  vector_operations.hpp
3/src/items/: hammer.cpp  lock_pick.cpp  shield.cpp  sword.cpp
3/tests/: CMakeLists.txt  tests.cpp
external_code/: .gitignore
external_code/2/: .gitignore  CMakeLists.txt  Makefile  ligma.cpp  main.cpp
external_code/2/StackLib/: stack.cpp  stack.h
external_code/2/StackStaticLib/: stack_static.h
external_code/2/TestLib/: test.cpp
external_code/2/student_work/aachelis/: 1-3.txt  c4.txt
external_code/2/student_work/abobus/: 1.txt  1gg.txt  2-3.txt  merged.txt
hack_sfml/: CMakeLists.txt  Makefile
